--- a/hdoj/1003/README
+++ b/hdoj/1003/README
@@ -1,2 +1,7 @@
 首先，创建一个结构体context，
-为其标出最大值，最大值起始值，最大中止值/
+为其标出最大值，最大值起始值，最大中止值。
+创建函数，挑战，接受两个整数，代表可能为最大值的一个区块的起始值和中止值（两闭）。
+
+创建结构体，链表元素。
+创建数组，用于存放输入。
+创建链表。含：此区块起始id，中止id，区块内大小，上一block指针，下一block指针
